--- a/WidgetDecorator_WidgetsExtension.entitlements
+++ b/WidgetDecorator_WidgetsExtension.entitlements
@@ -10,5 +10,7 @@
 	</array>
 	<key>com.apple.security.network.client</key>
 	<true/>
+	<key>com.apple.security.personal-information.photos-library</key>
+	<true/>
 </dict>
 </plist>
